# rustapi

./: .gitignore  Cargo.toml
migrations/2018-08-22-050031_rustapi/: down.sql  up.sql
src/: db.rs  main.rs  person.rs  schema.rs
