[package]
name = "rustapi"
version = "0.1.0"
authors = ["Brent Gardner <bgardner@squarelabs.net>"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
serde = "1.0.71"
serde_json = "1.0.26"
serde_derive = "1.0.71"

[dependencies.rocket_contrib]
version = "0.3.15"
default-features = false
features = ["json"]
